--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav>
-        <h3>QuizzForge</h3>
+        <h3><a href="./dashboard.html"style="color:#FFFFFF ;">QuizzForge</a></h3>
         <input type="text" id="" placeholder="Tìm kiếm bài test">
         <ui class="menu">
             <li>Trang chủ</li>
