--- a/pages/login.html
+++ b/pages/login.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/login.css">
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+    <!-- SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <title>Document</title>
 </head>
 
@@ -24,15 +30,15 @@
                 <input type="email" id="email" placeholder="Địa chỉ email">
                 <span class="error-message">Email không hợp lệ</span>
             </div>
-        
+
             <div class="form-group">
                 <label for="password">Mật khẩu</label><br>
                 <input type="password" id="password" placeholder="Mật khẩu">
-                <span class="error-message">Mật khẩu ít nhất 6 ký tự</span>
+                <span class="error-message">Mật khẩu ít nhất 8 ký tự</span>
             </div>
-            <button type="submit">Đăng nhập</button>
+            <button type="submit" id="login-btn">Đăng nhập</button>
         </form>
-        
+
 
 
         <p>Chưa có tài khoản?<a href="./register.html"> Đăng ký </a></p>
