--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -40,126 +40,19 @@
             </div>
         </div>
 
-        <div class="grid-container">
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-contain">
-                <div>
-                    <img src="/Project_Frontend_Fundamental/assets/images/image 1.png" alt="">
-                </div>
-                <div>
-                    <ul>
-                        <li>🏠 Đời sống</li>
-                        <li>Thách thức sự hiểu biết của bạn</li>
-                        <li>15 câu hỏi - 1 lượt chơi</li>
-                        <li><button>Chơi</button></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        <div class="grid-container"></div>
 
         <div class="pagination">
-            <button class="prev">&lt;</button>
-            <button class="page active">1</button>
-            <button class="page">2</button>
-            <button class="page">3</button>
-            <button class="next">&gt;</button>
+            <button onclick="prevPage()" class="prev">&lt;</button>
+            <span id="pageNumbers"></span>
+            <button onclick="nextPage()" class="next">&gt;</button>
         </div>
     </section>
 
     <footer class="footer">
         <p>© 2025 Quiz App. All rights reserved.</p>
     </footer>
-    <script></script>
+    <script src="../js/dashboard.js"></script>
 </body>
 
 </html>
