--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -26,7 +26,7 @@
     <thead>
         <div class="head">
             <p>Hãy thử 1 câu đố ngẫu nhiên 🎲</p>
-            <button>Play</button>
+            <button onclick="window.location.href='./play.html'">Play</button>
         </div>
     </thead>
 
